Adding absolute import support for sass

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -1,5 +1,5 @@
-@import './fonts.scss';
-@import './variables.scss';
+@import 'fonts';
+@import 'variables';
 @import '../../node_modules/normalize.css/normalize.css';
 
 * {
