--- a/app/components/Layout/Layout.scss
+++ b/app/components/Layout/Layout.scss
@@ -1,5 +1,13 @@
-@import '../../styles/variables';
+@import 'variables';
+@import 'mixins';
 
 .root {
-  color: #0ff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100wh;
+  height: 100vh;
+  font-size: 2rem;
+  background-color: $color-bg;
+  color: $color-text;
 }
